project link not opening on mobile fixed

--- a/src/index.css
+++ b/src/index.css
@@ -161,7 +161,15 @@ section h1:hover {
   position: relative;
   border-top: 1px solid var(--text-color);
   border-bottom: 1px solid var(--text-color);
+  background-color: transparent;
   margin: 0 2%;
+}
+
+.project-link a {
+  position: relative;
+  z-index: 10;
+  text-decoration: none;
+  color: inherit;
 }
 
 .project-info {
